scss/_custom.scss
/* ... */
.banner-less {
    padding-top: ($global-margin * 4);
}
// Buttons

.button {
	text-transform: uppercase;
	font-weight: $global-weight-bold;
	margin-bottom: ($global-margin / 2);
	box-shadow: 2px 2px rgba($black, .3);
	position: relative;
	overflow: hidden;
	@include breakpoint(medium down) {
		padding: 1em 2rem;
	}
	&:only-child {
		margin-bottom: 0;
	}
}

// Callout

.callout {
	@include breakpoint(medium down) {
		padding: 2.5em 1em;
	}
	&.primary {
		color: $white;
		// z-index: -2;
		input:focus {
			border-color: map-get($foundation-palette, camden-orange);
		}
		label {
			color: $white;
		}
	}
}

// Tabs
.tabbed {
	margin-bottom: ($global-margin * 4);
	&.wrapper {
		border-radius: 0;
	}
	.wrapper-switch {
		@include breakpoint(large down) {
			padding-top: ($global-padding * 2);
			padding-bottom: $global-padding;
		}
	}
	@include breakpoint(medium down) {
		padding-top: 2.5em;
	}
	.container-title {
		@include breakpoint(large) {
			display: none;
		}
	}
	.tabs-mobile {
		@include breakpoint (large) {
			display: none;
		}
	}
	.fancy-select {
		margin-bottom: 0;
	}
	.tabs {
		border-radius: $global-radius;
		@include breakpoint(large) {
			display: flex;
			justify-content: center;
			flex: 1 100%;
		}
		display: none;
		.tabs-title {
			flex: 1;
			&.is-active {
				.title {
					color: map-get($foundation-palette, aubergine);
				}
				a {
					svg path,
					svg circle,
					svg ellipse {
						stroke: map-get($foundation-palette, aubergine);
						fill: transparent;
					}
				}
			}
			a {
			    border-radius: $global-radius;
				> * {
					margin: 0;
				}
				.icon {
					@include breakpoint(small only) {
						display: none;
					}
				}
				svg path,
				svg circle,
				svg ellipse {
					stroke: map-get($foundation-palette, field-green);
					fill: transparent;
				}
				&:hover {
					svg path,
					svg circle,
					svg ellipse {
						stroke: map-get($foundation-palette, aubergine);
						fill: transparent;
					}
					.title {
						color: map-get($foundation-palette, aubergine);
					}
				}
			}
		}
	}
	.tabs-content {
		border: 0;
		.tabs-panel {
			z-index: -3;
			border-bottom-right-radius: $global-radius;
			border-bottom-left-radius: $global-radius;
			@include breakpoint(medium down) {
				padding: 0;
			}
			@include breakpoint(large) {
				-moz-background-size: cover;
				-o-background-size: cover;
				-webkit-background-size: cover;
				background-size: cover;
				position: relative;
				background-position: 50% 50%;
				/* ie8- graceful degradation */
				background-position:50% 50%9 !important;
				width: 100%;
				height:100%;
				overflow:hidden;
			}
			.callout {
				@include breakpoint(medium down) {
					border-radius: 0;
					padding-bottom: ($global-padding * 2);
				}
				.image {
					@include breakpoint(medium down) {
						margin-bottom: $global-padding;
					}
					@include breakpoint(large) {
						display: none;
					}
				}
			}
		}

		#panel1 {
			background-image: url(../images/beach-2.jpg);
		}
		#panel2 {
			background-image: url(../images/beach-1.jpg);
		}
		#panel3 {
			background-image: url(../images/beach-3.jpg);
		}
	}
}
.tabs.vertical {
	> li {
		border-bottom: 1px solid $light-gray;
    	border-right: 3px solid transparent;
    	-webkit-transition: .5s ease-in-out;
		-moz-transition: .5s ease-in-out;
		-o-transition: .5s ease-in-out;
		transition: .5s ease-in-out;
    	&:last-child {
    		border-bottom: 0;
    	}
    	&:hover,
    	&.is-active {
    		//border-bottom: 1px solid $medium-gray;
    		border-right: 3px solid map-get($foundation-palette, light-orange);
    	}
	}
	.tabs {
		border: none !important;
	}
	.tabs-title {
		a {
			text-align: center;
		    padding: 1.65rem 1.5rem !important;
		    border-bottom-left-radius: $global-radius;
		    &:focus,
			&[aria-selected='true'] {
				background: $light-gray;
			}
		}
		img {
			display: inline-block;
		    max-width: 182px;
		}
	}
}
.tabs-content.vertical.map {
	border: 0;
	.tabs-panel {
		padding: 0;
		.details {
			@include breakpoint(medium down) {
				border-bottom: 3px solid $light-gray;
				padding-bottom: $global-padding;
			}
			img {
				width: 100%;
				@include breakpoint(medium down) {
					display: none;
				}
			}
			p {
				padding-left: $global-padding;
				padding-right: $global-padding;
				&:nth-of-type(1) {
					margin-top: $global-margin;
				}
			}
		}
	}
	.row {
		margin: 0;
	}
}
#locations-vert-tabs {
	@include breakpoint(medium down) {
		display: none;
	}
}
.tabs-mobile {
	.fancy-select {
		margin-left: $global-padding;
		margin-right: $global-padding;
	}
	@include breakpoint(large up) {
		display: none;
	}
}
/* ... */

